--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 cffi==1.15.1
 colorama==0.4.5
 cryptography==38.0.1
+pkg_resources==0.0.0
 pycparser==2.21
 PyMySQL==1.0.2
 python-dotenv==0.21.0
+tabulate==0.8.10
